# github-resume-assistant

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  pyproject.toml  render.yaml  requirements.txt
.claude/skills/commit-push/: SKILL.md
.claude/skills/implement/: SKILL.md
.claude/skills/open-pr/: SKILL.md
.claude/skills/plan-first/: SKILL.md
.claude/skills/prompt-practices/: SKILL.md
.claude/skills/review-pr/: SKILL.md
.claude/skills/self-review/: SKILL.md
.claude/skills/test/: SKILL.md
.github/workflows/: ci.yml
docs/: ACCESSIBILITY_AUDIT.md  ARCHITECTURE.md  CODING_PRACTICES.md  GIT_WORKFLOW.md  PRODUCT.md  ROADMAP.md  TESTING.md  WRITEUP.md
docs/mockups/: v2-web-app.html
frontend/: .env.local.example  .gitignore  README.md  package-lock.json  package.json  vitest.setup.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: AnalysisDashboard.test.tsx  AnalysisDashboard.tsx  AnalysisProgress.test.tsx  AnalysisProgress.tsx  ContributionGraph.tsx  DashboardSidebar.tsx  EmptyState.test.tsx  EmptyState.tsx  ErrorBanner.test.tsx  ErrorBanner.tsx  LandingForm.test.tsx  LandingForm.tsx  LoadingScreen.tsx  ResultsPanels.test.tsx  ResultsPanels.tsx  Sidebar.tsx  ThemeToggle.tsx
frontend/src/lib/: api.test.ts  api.ts  deriveStats.test.ts  deriveStats.ts  reportText.test.ts  reportText.ts  types.ts
src/resume_assistant/: __init__.py  config.py
src/resume_assistant/cache/: __init__.py  store.py
src/resume_assistant/clients/: __init__.py  anthropic.py  github.py
src/resume_assistant/core/: __init__.py  analysis.py  models.py  suggestions.py
src/resume_assistant/server/: __init__.py  app.py
src/resume_assistant/web/: __init__.py  app.py  resume_upload.py  serialize.py  service.py
src/resume_assistant/web/static/: app.css  app.js
src/resume_assistant/web/templates/: base.html  index.html  results.html
tests/: conftest.py
tests/cache/: test_store.py
tests/clients/: test_anthropic.py  test_github.py
tests/core/: test_analysis.py  test_suggestions.py
tests/server/: test_app.py
tests/web/: test_resume_upload.py  test_service.py  test_web_app.py
