[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "resume-assistant"
version = "1.0.0"
description = "An MCP server that grounds resume advice in real GitHub activity."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "mcp>=1.2.0",
    "requests>=2.31",
    "anthropic>=0.40",
    "flask>=3.0",
    "pypdf>=4.0",
    "python-docx>=1.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-mock>=3.12",
    "responses>=0.25",
    "ruff>=0.6",
    "mypy>=1.11",
    "types-requests>=2.31",
]

[project.scripts]
resume-assistant = "resume_assistant.server.app:main"
resume-assistant-web = "resume_assistant.web.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
resume_assistant = ["web/templates/*.html", "web/static/*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["resume_assistant"]
mypy_path = "src"

# python-docx ships no type information; don't fail strict mode over its imports.
[[tool.mypy.overrides]]
module = ["docx.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
